# agent/api/swagger.json
@@ -74,6 +74,20 @@
                 }
             }
         },
+        "DiskSpecs": {
+            "type": "object",
+            "properties": {
+                "device": {
+                    "type": "string"
+                },
+                "fsType": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "HostSpecs": {
             "type": "object",
             "properties": {
@@ -122,6 +136,12 @@
             "properties": {
                 "cpu": {
                     "$ref": "#/definitions/CpuSpecs"
+                },
+                "disk": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/DiskSpecs"
+                    }
                 },
                 "host": {
                     "$ref": "#/definitions/HostSpecs"
